# c-compiler

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ast/: ast.cpp  ast.h
src/codegen/: codegen.cpp  codegen.h
src/lexer/: lexer.cpp  lexer.h  lexer.l
src/optimizer/: optimizer.cpp  optimizer.h
src/parser/: parser.cpp  parser.h  parser.y
src/sema/: sema.cpp  sema.h  symbol_table.cpp  symbol_table.h
tests/: CMakeLists.txt
tests/unit/: test_codegen.cpp  test_lexer.cpp  test_parser.cpp  test_sema.cpp
